fixes z-index of backdrop elements becoming greater than popup modal

--- a/source/features/sticky-discussion-sidebar.css
+++ b/source/features/sticky-discussion-sidebar.css
@@ -11,3 +11,8 @@
 .rgh-sticky-sidebar + .border-top {
 	display: none;
 }
+
+/* Fixes issue #2576 where opening sidebar modal changes the z-index of certain images and elements */
+[class*="TimelineItem"] {
+    z-index: 0 !important;
+}
